--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 		<module>zakiis-job-demo</module>
 		<module>zakiis-log-demo</module>
 		<module>zakiis-web-demo</module>
+		<module>zakiis-security-demo</module>
 	</modules>
 	
 	<dependencyManagement>
